# flask-duckdb-wasm

./: README.md  pyproject.toml
API TEST/: FILTER USERS.bru  LIST USERS.bru  bruno.json
api_db_test/: app.py
api_db_test/templates/: index.html
